--- a/9.html
+++ b/9.html
@@ -961,6 +961,86 @@
 118w78X A 19 CFR 111.23 (b), 19 CFR 111.29 (b)(2)(ii) 118w78XX
 118w79X B 19 CFR 141.34 118w79XX
 118w80X D 19 CFR 113.37(g)(1) 118w80XX
+218w1X D Prep of 7501 Instructions, Page 9 – Block 17 IT Date notes 218w1XX
+218w2X D Prep of 7501 Instructions, Page 11 – Block 24 Ref. Number 218w2XX
+218w3X E Prep of 7501 Instructions - Page 15 – sets 218w3XX
+218w4X D Appendix 2 to Prep of 7501, page 30 - 32 218w4XX
+218w5X D HTSUS 6212.20.0020 provides for girdles of mmf 218w5XX
+218w6X ALL Credit to all, no correct answer 218w6XX
+218w7X A and E Credit provided for HTSUS 6103.42.1040 because question did not include “worn” and HTSUS 6309.00.0010 218w7XX
+218w8X ALL Credit to all, no correct answer 218w8XX
+218w9X D 19 CFR 141.32 CBPF 5291 218w9XX
+218w10X D 19 CFR 141.35 218w10XX
+218w11X A 19 CFR 141.34 218w11XX
+218w12X E 19 CFR 134.33 J-list 218w12XX
+218w13X D 19 CFR 141.113(b) 218w13XX
+218w14X D 19 CFR 163.2(e) 218w14XX
+218w15X 19 CFR 111.19(b)1,2,3,5 and 6 218w15XX
+218w16X D 19 CFR 113.62 & 19 CFR 111.23 218w16XX
+218w17X A 19 CFR 111.19(f), 19 CFR 111.23(b), 19 CFR 111.28(a), 19 CFR 111.29(a), 19 CFR 111.36(c) 218w17XX
+218w18X D 19 CFR 111.2(a)(1) 218w18XX
+218w19X E 19 CFR 111.11(a)(4) 3 years 218w19XX
+218w20X 19 CFR 111.25(b)(1)(ii) 218w20XX
+218w21X B 19 CFR 111.13(f) 218w21XX
+218w22X C 19 CFR 165.0 Scope 218w22XX
+218w23X E Duty, MPF, ADD and HMF (HMF applicable since sea port per 19 CFR §24.24) ($186.84 + $26.97 + $3,067.29 +$9.73=$3290.83); 7501 Instructions column 33, block 39, block 40. 218w23XX
+218w24X D $ 19,719.99 = $9655. X 3.9% - 376.55 – 9655. X .3464% = 33.44 & 9655 x 200% = 19310.00. 19310.00 + 376.55 + 33.44 = $19,719.99 218w24XX
+218w25X $ 13,210.11 = $8432.00 X 5.5% = 463.76, $8432.00 X .3464% = 29.21, $8432.00 X 150.82% = 12717.14. 463.76 + 29.21 + 12717.14 = 13210.11 218w25XX
+218w26X E $6837.63 = $15201. X 2.5% = 380.03, $15201. X .3464% 52.66. $15201. X .125% = 19.00, 15201. X 28.25% = 4745.97, 15201. X 13.76% = 2091.66. 380.03 + 52.66 + 19.00 + 4294.28 + 2091.66 = 6837.63 218w26XX
+218w27X E Surety 19 CFR 113.3 218w27XX
+218w28X D 19 CFR 19.44(a) 218w28XX
+218w29X E 19 CFR 113.63(c)(4) 218w29XX
+218w30X E 19 CFR 113.13(c) 218w30XX
+218w31X D 19 CFR 171.2 (b) 218w31XX
+218w32X C 19 CFR 171.42 218w32XX
+218w33X D 19 CFR 174.11 218w33XX
+218w34X A 19 CFR 171, Appendix C. Part XI(B)(1)(b) 218w34XX
+218w35X E 19 CFR 171, Appendix C to Part 171, III. B 218w35XX
+218w36X E GN12 HTSUS, Article 401 218w36XX
+218w37X B 19 CFR 102.13 (c), GN 12 (f)(vi) HTSUS 218w37XX
+218w38X B 19 CFR 24.23(c)(8) 218w38XX
+218w39X E 19 CFR 181.113 (b)(3) 218w39XX
+218w40X B HTSUS 4014.10.0000 218w40XX
+218w41X A HTSUS 8525.80.40 218w41XX
+218w42X B HTSUS 4412.32.3225 218w42XX
+218w43X D HTSUS 1605.21.1030 218w43XX
+218w44X C HTSUS 9801.00.1098 218w44XX
+218w45X E HTSUS 8544.20.0000 218w45XX
+218w46X B HTSUS 8472.90.9040 218w46XX
+218w47X A HTSUS 2710.19.3070 218w47XX
+218w48X E HTSUS 3201.17.9010/6.5% 218w48XX
+218w49X C HTSUS 6205.30.2030 218w49XX
+218w50X D HTSUS 6110.20 218w50XX
+218w51X C HTSUS 6912.00.3510 218w51XX
+218w52X E HTSUS 6110.20.2065 218w52XX
+218w53X A 19 CFR 163.4(b)(2) 218w53XX
+218w54X B 19 CFR 163.6 (b)(ii) 218w54XX
+218w55X A 19 CFR 10.16(b)(4)B 218w55XX
+218w56X B 19 CFR 18.10(a) 218w56XX
+218w57X A 19 CFR 151.16(f) 218w57XX
+218w58X D 19 CFR 24.36(d) 218w58XX
+218w59X C GN 3 (e)(v) 218w59XX
+218w60X D 19 CFR 102 Appendix Publication No. 0820-1118 218w60XX
+218w61X E 19 CFR 12.80 (a) & (b) 218w61XX
+218w62X D HTSUS GN 3(e)(ii) 218w62XX
+218w63X B 19 CFR 163 218w63XX
+218w64X D 19 CFR 152.103(a) 218w64XX
+218w65X B 19 CFR 159.31 – 19 CFR 159.34 218w65XX
+218w66X C 19 CFR 152.2 218w66XX
+218w67X A 19 CFR 152.101(b) 218w67XX
+218w68X D 19 CFR 191.72 218w68XX
+218w69X C 19 CFR 191.51(c)(4) 218w69XX
+218w70X D 19 CFR 191.7(b)(3) 218w70XX
+218w71X C 19 CFR 191.36(d) 218w71XX
+218w72X C 19 CFR 133.25(a) 218w72XX
+218w73X E 19 CFR 133.3(b) 218w73XX
+218w74X C 19 CFR 12.39(b)(2) 218w74XX
+218w75X E 19 CFR 133.21, 19 CFR 133.24, 19 CFR 145.55, 19 CFR 148.55 218w75XX
+218w76X A 19 CFR 146.25 and 19 CFR 146.53 218w76XX
+218w77X C 19 CFR 146.1 218w77XX
+218w78X E 19 CFR 146.39 218w78XX
+218w79X E 50 – Page 11, Section 9.4.3 Business Rules & Process Document 218w79XX
+218w80X D Ace Business Rules & Process Document Page 16 11.2.1 218w80XX
 
 
 
