--- a/9.html
+++ b/9.html
@@ -1041,6 +1041,86 @@
 218w78X E 19 CFR 146.39 218w78XX
 218w79X E 50 – Page 11, Section 9.4.3 Business Rules & Process Document 218w79XX
 218w80X D Ace Business Rules & Process Document Page 16 11.2.1 218w80XX
+117w1X C Instructions for Preparation of CBP Form 7501 (July 24, 2012) 117w1XX
+117w2X C Prep of 7501 Instructions, Column 29, Page 15 (B.) AD/CVD CASE 117w2XX
+117w3X C Duty 2.4% x $9875.00 = $237.00, MPF .3464% X $9875.00 = $34.21, A DD 68.89% x $9875.00 = $6,802.89, TOTAL $ 7074.10 117w3XX
+117w4X B 19CFR113.13(c) 117w4XX
+117w5X A 19CFR 142.15 117w5XX
+117w6X C 19 CFR113.13(b)1-6 117w6XX
+117w7X E 19 C.F.R§113.52 (113.43(c) 117w7XX
+117w8X E 19 CFR§113.38(b) 117w8XX
+117w9X D 19 CFR§ 111.96(d) 117w9XX
+117w10X A 19 CFR 141.20(a) 117w10XX
+117w11X D 19 CFR 111.1, 19 CFR 111.23 117w11XX
+117w12X E 19 CFR 111.29(b)(2) 117w12XX
+117w13X C 19 CFR 163.6(b)(ii) 117w13XX
+117w14X D 19 CFR 111.19 (c) 117w14XX
+117w15X C 19 CFR 145.35, 19CFR 10.31, 19 CFR 10.49,19 CFR 10.102 117w15XX
+117w16X E 6205.30.2070, HTS Note 2 (A) to Section XI,HTS Note 1 to Chapter 54 117w16XX
+117w17X D HTS 7117.90.9000, HTS Note 11 to Chapter 71 117w17XX
+117w18X A HTSUS Heading 6110, GRI, specifically GRI 3 and 3(c) 117w18XX
+117w19X A Harmonized Tariff Schedule of the United States (HTSUS), General Rules of Interpretation (GRI), specifically GRI 3 (c), Additional Rules of Interpretation 1 (d), the applicable subheading for a woman’s knitted Irish sweater constructed from 50% merino wool and 50% man-made rayon is 6110.30.1520 at a duty rate of 17% ad valorem is correct. 117w19XX
+117w20X E Chapter 20, Note 4 117w20XX
+117w21X E HTS Note 2 to Chapter 16, HTS 1902.20.0040 117w21XX
+117w22X D SECTION XI, NOTE 1(s), SECTION XI, SUBHEADING NOTE 2 (A), HEADINGS 6304 AND 9404, GRI 3(c) 117w22XX
+117w23X B 19CFR141.89(a) 117w23XX
+117w24X E HTS 2005.20.0070, HTS Note 3(c) to Chapter 7, HTS Note 1(d) to Chapter 11 117w24XX
+117w25X C Chapter 63, Note 3, GRI 3 (c), Chapter 54, Note 1 117w25XX
+117w26X B HTS# 8513.10.2000 117w26XX
+117w27X C 19 CFR 191.34(a) 117w27XX
+117w28X C 19 CFR 191.112 117w28XX
+117w29X  117w29XX
+117w30X  117w30XX
+117w31X Answer Citations 117w31XX
+117w32X C 19 CFR 101.3 117w32XX
+117w33X B 19 CFR 191.35(a) 117w33XX
+117w34X B 19 C.F.R. § 4.7(b)(4)(i) 117w34XX
+117w35X D 19 CFR § 141.89(a) 117w35XX
+117w36X D 19 C.F.R. § 141.83(c); 19 CFR §141.86 (a)(1), (a)(7), (a)(8), (a)(9), (j) 117w36XX
+117w37X C 19 C.F.R. § 141.4(c)(1) 117w37XX
+117w38X B 19 C.F.R. §.141.4, General Note 3(e) to the HTSUS, Chapter 86, 89 AND 98 of the HTSUS 117w38XX
+117w39X B PREP OF 7501 INSTRUCTIONS 117w39XX
+117w40X A 19 CFR 101.1 117w40XX
+117w41X A 19 CFR 114.31 (a): 19 C.F.R. §§ 114.22(a)(2)(i)-(ii); 114.22(c)(1); 117w41XX
+117w42X E 114.22(d)(1)(ii); 114.31(a) HTS Chapter 98 Subchapter VIII, U.S. Note 1 117w42XX
+117w43X C 19CFR 141.5 117w43XX
+117w44X E 19 CFR 12.42 (a)(b) 117w44XX
+117w45X D 19 C.F.R. § 174.13(a) 117w45XX
+117w46X E 19CFR176.11 117w46XX
+117w47X A 19 C.F.R. 162.74(a)(2) 117w47XX
+117w48X D 19 CFR 162.74 117w48XX
+117w49X B 19 CFR 172.3 117w49XX
+117w50X E 19 C.F.R. §174.32; 19CFR174.16; 19CFR174.21(b); 19CFR174.22(d); 19CFR174.12(b) 117w50XX
+117w51X D 19 CFR 24.23(c) enumerates the exemptions and limitations to Paragraphs (b) (1) and (b) (2) in regards to fees for processing merchandise. 117w51XX
+117w52X D 19 C.F.R. § 181.11(d) 117w52XX
+117w53X C 19 CFR 181.22(b)(2) 117w53XX
+117w54X D General Note 13 117w54XX
+117w55X D 19 CFR 10.1026 117w55XX
+117w56X D 19 CFR 163 117w56XX
+117w57X E 19 CFR 19.1 117w57XX
+117w58X E 19 CFR 146.39(a) 117w58XX
+117w59X B 19 CFR 19.6(d)(2), 19 CFR 18.20(a), 19CFR 144.37(a), 19 CFR 144.13, 19 CFR 174.13(b), 19 CFR 151.11 117w59XX
+117w60X B 19 CFR 146.52 117w60XX
+117w61X E 19CFR133.3(b) Fees 117w61XX
+117w62X B 19 C.F.R. § 133.27(a) 117w62XX
+117w63X E 19 C.F.R. § 148.55 117w63XX
+117w64X C 19CFR133.6 117w64XX
+117w65X A 19 CFR134.46 117w65XX
+117w66X D 19CFR 134.33 117w66XX
+117w67X D 19CFR134.12 117w67XX
+117w68X A 19 CFR 141.34 117w68XX
+117w69X C 19CFR141.36 117w69XX
+117w70X  117w70XX
+117w71X  117w71XX
+117w72X Answer Citations 117w72XX
+117w73X  117w73XX
+117w74X E 19 C.F.R. § 113.37(g)(1), 117w74XX
+117w75X C Subheading 9801.10.1012, HTSUS, 19 C.F.R. § 143.21(k), CBP Form 7501 Instructions 117w75XX
+117w76X E 19 C.F.R. § 24.23(c)(i), 117w76XX
+117w77X E Prep of 7501 instructions 117w77XX
+117w78X D Prep of 7501 instructions 117w78XX
+117w79X D Prep of 7501 instructions 117w79XX
+117w80X D Prep of 7501 instructions 117w80XX
 
 
 
