--- a/9.html
+++ b/9.html
@@ -1121,7 +1121,86 @@
 117w78X D Prep of 7501 instructions 117w78XX
 117w79X D Prep of 7501 instructions 117w79XX
 117w80X D Prep of 7501 instructions 117w80XX
-
+217w1X E 19 CFR § 165.1 CREDIT TO ALL 217w1XX
+217w2X D 19 CFR § 165.14(b)(1)-(6) CREDIT TO ALL 217w2XX
+217w3X C DUTY 2.4% x $7134.00 = $171.22, MPF .3464% X $9875.00 = $25.00, ADD 68.89% x $7134.00 = $4985.24, TOTAL $ 5,181.46. 217w3XX
+217w4X C 19 CFR § 113.26(a) 217w4XX
+217w5X A 19 CFR § 113.13 217w5XX
+217w6X A 19 CFR § 10.31(f) 217w6XX
+217w7X B 19 CFR § 128.11(b)(1)(i) 217w7XX
+217w8X B 19 CFR § 163.2(e) 217w8XX
+217w9X D 19 CFR § 111.19(f) 217w9XX
+217w10X C 19 CFR § 111.29(b)(2)(i) & (ii) 217w10XX
+217w11X A 19 CFR § 111.11 217w11XX
+217w12X D 19 CFR § 111.29(a) 217w12XX
+217w13X D 19CFR § 141.57(i)(2) 217w13XX
+217w14X C 19 CFR § 111.21, § 111.23. § 111.25, § 163.4, Appendix to Part 163 217w14XX
+217w15X B HTSUS 8481.20.0040, HTSUS GRI 1, HTSUS Note 2 to Section XVI, HTSUS Subheading Note 3 to Chapter 84. 217w15XX
+217w16X D HTSUS 4202.92.4500, Chapter 42 Additional US Note, 1 and 2. 217w16XX
+217w17X C HTSUS 7318.15.2010, GRI 1 and GRI 6 217w17XX
+217w18X D Additional U.S. Note 2 to Chapter 62 217w18XX
+217w19X A HTSUS 8475.29.0000, GRI 2(a), 19 CFR § 141.58(b) 217w19XX
+217w20X D HTSUS 4811.90.6010, Chapter 48 and its associated notes 217w20XX
+217w21X C HTSUS 4602.90.0000 217w21XX
+217w22X A HTSUS 8441.30.0000, GRI 1, Note 4 to Section XVI, Note 7 to Chapter 84 217w22XX
+217w23X E HTSUS 8539.50.0020, 217w23XX
+217w24X C HTSUS 9503.00.0073, GRI 1, Chapter 95, Statistical Note 1 217w24XX
+217w25X E HTSUS 6912.00.4810, HTSUS Additional U.S. Note 5(a) to Chapter 69, Note 5(c), HTSUS Additional U.S. Note 6(a) to Chapter 69 and 6(b) CREDIT TO ALL 217w25XX
+217w26X B HTSUS 6113.00.9030, Note 2(a)(1) to Chapter 59, Note 8 to Chapter 61, Section XI subheading note 2(A), Section XI Note 2(A) 217w26XX
+217w27X D HTSUS 6803.00.5000, Chapter 25, Note 2(e); Chapter 68 Note 2 217w27XX
+217w28X C HTSUS 6204.63.9010, 217w28XX
+217w29X D HTSUS 7219.13.0002, GRI 1, Chapter 72, Note 1(e) - stainless steel, Note 1(f) – other alloy steel, Note 1(k) – flat rolled products 217w29XX
+217w30X C 19 CFR § 191.71(a) 217w30XX
+217w31X C 19 CFR § 191.33 217w31XX
+217w32X D 19 CFR § 191.52(c) 217w32XX
+217w33X E 19 CFR § 191.11(a) 217w33XX
+217w34X D 19 CFR § 159.11(a), § 159.9 (c)(2), § 162.80(a)(2)(ii), § 159.12(c) 217w34XX
+217w35X B 19 CFR § 114.23 and 19 CFR § 10.37 217w35XX
+217w36X C 19 CFR § 12.150 217w36XX
+217w37X E Customs Directive 3530-002A 217w37XX
+217w38X B 19 CFR § 4.7(b)(4)(i) 217w38XX
+217w39X A 19 CFR § 151.42(a) 217w39XX
+217w40X D 19 CFR § 12.98(c) and § 12.99(a) 217w40XX
+217w41X C 19 CFR § 141.4(a) 217w41XX
+217w42X C 19 CFR § 123.10(b) 217w42XX
+217w43X D HTSUS 9801.00.10 allows duty-free importation of previously-entered merchandise that is being returned to the U.S. within 3 years of being exported. 217w43XX
+217w44X B 19 CFR §172.3(b), § 152.13, § 143.21, § 152.2, § 181.12 217w44XX
+217w45X B 19 CFR § 174.13 (a) (1); (3); (9); & 19 CFR § 111.30 (d) 217w45XX
+217w46X E 19 CFR § 172.1 217w46XX
+217w47X B 19 CFR § 162.74(b) 217w47XX
+217w48X D 19 CFR § 171.32, 19 CFR § 161.5 217w48XX
+217w49X D 19 CFR § 24.23 (c)1, 5, 7 217w49XX
+217w50X A HTSUS GN 26(k), 19 CFR §10.460, 19 CFR § 10.402(o) 217w50XX
+217w51X C 19 CFR § 102.0 Scope, 19 CFR § 10.809 Definitions, and 19 CFR §10.769 217w51XX
+217w52X D General Note 25, GN 12, GN, 27, GN 28 217w52XX
+217w53X A HTSUS GN 28(c)(ii)(A)&(B), GN29(c)(ii)(A) & (B), GN26(c)(ii)(A) & (B), GN34(c)(ii)(A) & (B), GN33(c)(ii)(A) & (B), GN35(c)(ii)(A) & (B), GN32(c)(ii)(A) & (B) and GN25(c)(ii)(A) & (B), respectively). (GN31(d)(iv)(F) & (G)) GN30(d)(iv)(F)&(G), GN27(d)(iv)(F) & (G) and GN31(d)(iv)(F) & (G) 217w53XX
+217w54X C 19 CFR § 19.11, § 18.25 217w54XX
+217w55X C 19 CFR § 146.25 217w55XX
+217w56X C 19 CFR § 19.1(a) 217w56XX
+217w57X E 19 CFR § 19.12(d)(3)(i) 217w57XX
+217w58X C 19 CFR § 10.175 217w58XX
+217w59X E 19 CFR § 133.21 217w59XX
+217w60X E 19 CFR § 133.21(e) 217w60XX
+217w61X C 19 CFR § 12.39(b)(2) 217w61XX
+217w62X D 19 CFR § 133.21(b) 217w62XX
+217w63X C 19 CFR § 133.23(c) 217w63XX
+217w64X A 19 CFR § 134.51 217w64XX
+217w65X C 19 CFR § 134.26(a) 217w65XX
+217w66X D 19 CFR § 134.11, 19 CFR § 134.31-33 217w66XX
+217w67X B 19 CFR § 113.62, § 141.113(i) - § 134.1, § 134.2, § 134.51 217w67XX
+217w68X B 19 CFR § 141.34 217w68XX
+217w69X D 19 CFR § 141.35 217w69XX
+217w70X C 19 CFR § 141.32 217w70XX
+217w71X A CD 3530-002A, Sections 5.3.1 and 5.3.2 217w71XX
+217w72X A 19 CFR § 141.43(a) 217w72XX
+217w73X B 19 CFR § 141.31(d) & 19 C.F.R. § 111.29(b)(1), (b)(2)(i), 19 C.F.R. § 141.31(d), 19 U.S.C. § 1641(d)(1)(C), (d)(2)(A), 19 C.F.R. § 111.91(a), 19 C.F.R. § 141.34, 19 C.F.R. § 141.44, 19 C.F.R. § 101.1 217w73XX
+217w74X D 19 CFR § 141.46 217w74XX
+217w75X E 19 CFR § 111.23(a)(2) 217w75XX
+217w76X D 19 CFR § 152.2 217w76XX
+217w77X D 19 CFR § 152.103(d)(1)(2), price of the mold, the refurbishing cost, and the freight cost 217w77XX
+217w78X C 19 CFR § 152.103 (a)(1), and (a)(4) 217w78XX
+217w79X B 19 CFR 152.108 217w79XX
+217w80X B 19 CFR § 10.33(a), § 24.3a(c)(3), § 111.2(a)(2)(B)(iii), § 132.3, § 152.108(c) 217w80XX
 
 
 
