--- a/CBLExam121vMainPage2.htm
+++ b/CBLExam121vMainPage2.htm
@@ -1161,7 +1161,7 @@ if (q == undefined){
 		    if (n != -1 && q != undefined){
 			
 		    	//$("#content").html("The correct answer is:" + " " + pp);
-			//answers1.push("CORRECT" + " " + pp);
+			answers1.push("CORRECT" + " " + pp);
 			count += 1
 			
 			if (q == undefined){
@@ -1173,7 +1173,7 @@ if (q == undefined){
 		    }else{
 			
 			//$("#content").html("Incorrect. The answer is:" + " " + pp);
-			//answers1.push("INCORRECT" + " " + pp);
+			answers1.push("INCORRECT" + " " + pp);
 			if (q == undefined){
 			answers1.pop();
 			}
