--- a/9.html
+++ b/9.html
@@ -1201,6 +1201,86 @@
 217w78X C 19 CFR § 152.103 (a)(1), and (a)(4) 217w78XX
 217w79X B 19 CFR 152.108 217w79XX
 217w80X B 19 CFR § 10.33(a), § 24.3a(c)(3), § 111.2(a)(2)(B)(iii), § 132.3, § 152.108(c) 217w80XX
+121w1X	 A HTSUS 6212.10.3000										121w1XX
+121w2X	 D HTSUS 7113.11.5000										121w2XX
+121w3X	 A HTSUS Statistical Annexes – Annex C – Customs District and Port Code										121w3XX
+121w4X	 B FOB incoterm, buyer responsible										121w4XX
+121w5X	 C Prep of 7501, page 22										121w5XX
+121w6X	 C $4484 x .125% = $5.61										121w6XX
+121w7X	 C Ace Business Rules Section 1.7										121w7XX
+121w8X	 C Ace Business Rules Section 3.1										121w8XX
+121w9X	 E Ace Business Rules Section 5.0										121w9XX
+121w10X	 D 19 CFR § 141.34										121w10XX
+121w11X	 D 19 CFR § 141.335										121w11XX
+121w12X	 D 19 CFR § 141.39(a)(2)										121w12XX
+121w13X	 C 19 CFR § 145.12(a)(2)										121w13XX
+121w14X	 B 19 CFR § 18.1(d)(3)										121w14XX
+121w15X	 B 19 CFR 111.28(b)(1)(i), 19 CFR § 111.30(d), 19 CFR § 111.19										121w15XX
+121w16X	 D 19 CFR 111.2(a)(2)(v), 19 CFR § 141.33										121w16XX
+121w17X	 B 19 CFR § 111.53(e)										121w17XX
+121w18X	 D 19 19 CFR § 111.28(b)(1)(ii), 19 CFR § 111.28(b)(1)(i), 19 CFR § 111.25(a) 19 CFR § 111.28 (b)(3), 19 CFR § 111.36(a) 										121w18XX
+121w19X	 D 19 CFR § 111.21(b), 19 CFR § 111.2(iii), 19 CFR § 111.16(b)(4), 19 CFR § 111.19(f)(1), 19 CFR 111.33										121w19XX
+121w20X	 A HTSUS 7321.11.1030										121w20XX
+121w21X	 B HTSUS 8508.11.0000, HTSUS Note 1 (e) to Chapter 84										121w21XX
+121w22X	 E HTSUS 9504.50.0000, Subheading Note 1(b), GRI 1										121w22XX
+121w23X	 C HTSUS 6202.13.4005, GRI 1, Section Note XI, Subheading Note 2(A)										121w23XX
+121w24X	 D HTSUS 6809.11.0010, Chapter 25, Note 1, Chapter 68, Note 2, Chapter 69, Note 1, GRI 1										121w24XX
+121w25X	 D HTSUS 9402.10.0000, Chapter 94 Note 1(ij)										121w25XX
+121w26X	 D HTSUS 4202.92.4500, Chapter Note 1 of Chapter 42, Additional US Note 1 of Chapter 42, Additional US Note 2 to Chapter 42										121w26XX
+121w27X	 D HTSUS 6210.50.5520, Chapter 59 Note 2, Chapter 62 Note 5, Additional US Note 3(a0 to Chapter 62										121w27XX
+121w28X	 E HTSUS 9023.00.0000,A GRI 1, Chapter 49 Note 1(b)										121w28XX
+121w29X	 A HTSUS 8419.50.10, GRI 1, Note 2(a) to Section XVI, GRI 6										121w29XX
+121w30X	 C HTSUS 8504.40.9520, GRI 1, Note 2(a) of Chapter 90, GRI 6										121w30XX
+121w31X	 C HTSUS 2710.19.3500,										121w31XX
+121w32X	 C HTSUS 3304.99, Application of GRI 1, 3, 6 – Chapter 33 Note 2, Chapter 29 Note 1, Section VI – Note 2 in conjunction with the terms of the cited Headings.										121w32XX
+121w33X	 E HTSUS 8206.00.0000, GRI 1, HTSUS Note 1 to Chapter 82										121w33XX
+121w34X	 B HTSUS 3923.21.0020										121w34XX
+121w35X	 A 19 CFR § 190.72, 19 CFR § 191.71										121w35XX
+121w36X	 E 19 CFR § 190.21, 99%										121w36XX
+121w37X	 D 19 CFR § 190.51 (a)(2)i, ii,iv,v – viii – 10 digits										121w37XX
+121w38X	 A & D 19 CFR § 190.24, 19 CFR § 190.2, 19 CFR § 190.4, 19 CFR § 190.10, 19 CFR § 190.73										121w38XX
+121w39X	 B 19 CFR § 165.1 definitions										121w39XX
+121w40X	 C 19 CFR § 165.1 definitions										121w40XX
+121w41X	 E Duty - $12479 x 2.4% = 299.50. MPF - $12479 x .3464% = 43.23, ADD $12479 x 88.69% = 11,067.63 total duties & fees $11,410.36										121w41XX
+121w42X	 D 19 CFR § 163.4(a)(1)										121w42XX
+121w43X	 B CBPF 3347, 19 CFR § 24.11, 19 CFR § 141.20										121w43XX
+121w44X	 E 19 CFR § 113.52										121w44XX
+121w45X	 B 19 CFR § 113.2										121w45XX
+121w46X	 E 19 CFR § 113.26										121w46XX
+121w47X	 B 19 CFR § 18(h)(i)										121w47XX
+121w48X	 D 19 CFR § 18(h)(i)										121w48XX
+121w49X	 C 19 CFR § 10.1(a)(1)										121w49XX
+121w50X	 D 19 CFR § 114.24										121w50XX
+121w51X	 D General Note 4 (c)										121w51XX
+121w52X	 D RTME 3530-002A										121w52XX
+121w53X	 E 19 CFR § 10.16(c)(2)										121w53XX
+121w54X	 B 19 CFR § 10.53(e)(4)										121w54XX
+121w55X	 B 19 CFR § 12.41										121w55XX
+121w56X	 B GRI 1										121w56XX
+121w57X	 B 19 CFR §10.31										121w57XX
+121w58X	 B 19 CFR 159.3										121w58XX
+121w59X	 B 19 CFR § 171. Appendix B(G)										121w59XX
+121w60X	 E 19 CFR § 162.23(a)(1)										121w60XX
+121w61X	 A 19 CFR § 172.74(b)(4)										121w61XX
+121w62X	 D 19 CFR § 171, Appendix C										121w62XX
+121w63X	 C Subchapter XIX of Chapter 98 HTSUS, HTSUS 9819.11.06										121w63XX
+121w64X	 A Subchapter XX of Chapter 98 HTSUS, 9820.11.06										121w64XX
+121w65X	 D 19 CFR § 24.3(c)										121w65XX
+121w66X	 B General Note 12 HTSUS										121w66XX
+121w67X	 D 19 CFR § 152.102(a)(1)(i), 19 CFR § 152.103(d)(1)										121w67XX
+121w68X	 A 19 CFR § 152.103(a)(1)										121w68XX
+121w69X	 B HTSUS sub headings 9801.00.10 & 9801.00.20										121w69XX
+121w70X	 C 19 CFR § 152.101(c), 19 CFR § 152.103(1)(1)(iii)										121w70XX
+121w71X	 B 19 CFR § 134.32										121w71XX
+121w72X	 B 19 CFR § 132.22										121w72XX
+121w73X	 C 19 CFR § 134.11, 19 CFR § 134.21, 19 CFR § 134.22(2), 19 CFR §132.34(e), 19 CFR § 134.33										121w73XX
+121w74X	 C 19 CFR § 133.21(b)(2)(ii)(b)										121w74XX
+121w75X	 A 19 CFR § 133.3(b)										121w75XX
+121w76X	 E 19 CFR § 133.21, 19 CFR § 133.24, 19 CFR § 145.55, 19 CFR § 148.55										121w76XX
+121w77X	 A 19 CFR § 146.44(a), 19 CFR § 19.1(a)(9)										121w77XX
+121w78X	 B-D-E 19 CFR § 146.64										121w78XX
+121w79X	 C 19 CFR § 146.4(d)(2)										121w79XX
+121w80X	 E 19 CFR § 146.82										121w80XX
 
 
 
