--- a/9.html
+++ b/9.html
@@ -1281,6 +1281,171 @@
 121w78X	 B-D-E 19 CFR § 146.64										121w78XX
 121w79X	 C 19 CFR § 146.4(d)(2)										121w79XX
 121w80X	 E 19 CFR § 146.82										121w80XX
+119w1X	D 19CFR111.19(c)										119w1XX
+119w2X	 C 19CFR111.45(a)(b) 19CFR111.30(d)(4)										119w2XX
+119w3X	 B 19CFR111.28										119w3XX
+119w4X	 D 19CFR111.13(f)										119w4XX
+119w5X	 B 19CFR111.28(b)(1)(i)										119w5XX
+119w6X	 E 19CFR19.4(b)(4)(B)										119w6XX
+119w7X	 A & E 19CFR163.2(a), 19CFR163.2(d), 19CFR163.4(a), 19CFR163.4(b)(3)										119w7XX
+119w8X	 D 19CFR134 HTSUS										119w8XX
+119w9X	 B 19CFR134.1(b)										119w9XX
+119w10X	 C 19CFR134.43(a)										119w10XX
+119w11X	 D 19CFR11.12(b)										119w11XX
+119w12X	 D 19CFR133.23(b)										119w12XX
+119w13X	 C 19CFR133.21(f)										119w13XX
+119w14X	 D 19CFR133.21(b)(1)										119w14XX
+119w15X	 C 19CFR133.6										119w15XX
+119w16X	 A 19CFR141.113(c)										119w16XX
+119w17X	 E 19CFR162.74										119w17XX
+119w18X	 D 19CFR172.31										119w18XX
+119w19X	 E 19CFR171 Appendix B(2)(a)(i)										119w19XX
+119w20X	 B 19CFR171.2(e)										119w20XX
+119w21X	 E 19CFR10.31 – 10.40 HTSUS Sub Chapter XIII U.S. Note 1.a										119w21XX
+119w22X	 C 19CFR18.1										119w22XX
+119w23X	 A 19CFR174.22(c)										119w23XX
+119w24X	 C Chapter 26, Statistical Note 2										119w24XX
+119w25X	 D 19CFR192.4										119w25XX
+119w26X	 C 19CFR102 Appendix (7)										119w26XX
+119w27X	 C HTSUS Gen Note 4 (b)(ii)										119w27XX
+119w28X	 E 19CFR141.68, 19CFR141.69 and 19CFR142.3										119w28XX
+119w29X	 B 19CFR141.68 and 69										119w29XX
+119w30X	 D 19CFR4.37(b)										119w30XX
+119w31X	 D 19CFR133.46										119w31XX
+119w32X	 E $9875. X 2.4% duty = 237.00 - $9875. X .3464% mpf = 34.21 - 9875. X 86.98% ADD = 8589.58 // 237.00 duty + 34.21 mpf + 8589.28 ADD = total duties and fees of $8860.49										119w32XX
+119w33X	 C 19CFR351.107										119w33XX
+119w34X	 B 19CFR159.61(c)										119w34XX
+119w35X	 B 19CFR174.12(e)(1)										119w35XX
+119w36X	 B 19CFR351.218(a)										119w36XX
+119w37X	 E 19CFR113.38(b)										119w37XX
+119w38X	 D 19CFR113.13(a)										119w38XX
+119w39X	 D 19CFR113.11(b)(1)(i) & (c)										119w39XX
+119w40X	 B 19CFR113.62, 63, 64 and 113.73										119w40XX
+119w41X	 A 19CFR191.3										119w41XX
+119w42X	 C 19CFR191.28										119w42XX
+119w43X	 D 19CFR191.8										119w43XX
+119w44X	 D 19cfr191.22										119w44XX
+119w45X	 A Prep of 7501 Instructions, Entry Codes										119w45XX
+119w46X	 E HTSUS 6505.00.9076										119w46XX
+119w47X	" HTSUS 6505.00.9076/20.7¢ + 7.5% Invoice value $9000.00 2728 kg X 20.7 ¢ kg = 564.70 – 9000.00 – 564.70 = 8435.30 ÷ 1.078464 = 579.74 – 8435.30 - 579.74 = 7821.59 Ent Val 7822. X 7.5% = 586.65 and 7822 x .3464% = 27.10 Duties of 564.70 and 586.65 = 1151.35 along with MPF of 27.10
+Total duty and fees = 1178.45
+Note DDP to NY, NY door all duty and fees included"										119w47XX
+119w48X	 D HTSUS 6110.20.2069/16.5%										119w48XX
+119w49X	" A HTSUS 6110.20.2069/16.5%% Invoice Value $ 7440.00
+7440.00 ÷ 1.68464 – 6367.33 Ent Val.
+6367 x 16.5% - 1050.56 6367. X .3464$ = 22.06
+1050.56 duty plus 22.06 = 1072.62 Total Duties and Fees"										119w49XX
+119w50X	 D $2251.07										119w50XX
+119w51X	 E Prep of 7501 Instructions, Block 39										119w51XX
+119w52X	 A 19CFR111.29(b)(1)										119w52XX
+119w53X	 A 19CFR171 Appendix C										119w53XX
+119w54X	 D 19CFR111.2(a)(2)(ii)(A)(1)										119w54XX
+119w55X	 E 19CDR146.39										119w55XX
+119w56X	 B 19CFR146.66(b)										119w56XX
+119w57X	 E 19CFR112.11(a)										119w57XX
+119w58X	 D 19CFR146.51, 19CFR146.44(a), 19 CFR146.1										119w58XX
+119w59X	 B HTSUS 1806.20.2090										119w59XX
+119w60X	 B HTSUS 2009.90.4000										119w60XX
+119w61X	 A HTSUS 0902.10.1050										119w61XX
+119w62X	 A HTSUS 5702.31.2000										119w62XX
+119w63X	 D HTSUS 9403.20.0050										119w63XX
+119w64X	 A HTSUS 6111.20.6050										119w64XX
+119w65X	 D HTSUS 6404.19.2030										119w65XX
+119w66X	 D HTSUS 5801-36-0010										119w66XX
+119w67X	 E HTSUS 6505.0060										119w67XX
+119w68X	 E HTSUS 5903.20.2000										119w68XX
+119w69X	 CREDIT TO ALL HTSUS 8517.70.70										119w69XX
+119w70X	 B The duty rate for 8215.20.0000 is provided by the rate of duty applicable to that article in the set subject to the highest rate of duty. As compound rates are present, an equivalent rate must be calculated. Correct: Equivalent Rate Calculation: .004 + (4.8% * $.26) = $.02 $.02 / $.26 = 7.69%										119w70XX
+119w71X	 D True, Although Brazil is a GSP beneficary country, as demonstrated by its inclusion in HTSUS General Note 4 (a), the SPI “A+ in the Special column of the HTSUS pertaining to 3926.90.55 limits eligibility to least developed beneficiary developed countries (LDBDC”S) per HTSUS General Note 4 (b)9II) and the LDBDC list in HTSUS General Note 4 (b)(i) does not include Brazil.										119w71XX
+119w72X	 B HTSUS General Note 25(b)(i), (b)(ii) and (b)(iii) provide three methods that goods can originate under the terms of the SGFTA but none of them offer “exclusively from originating materials”.										119w72XX
+119w73X	 C The HTSUS General Note 33(c)(iii)(B) and 19 CFR 10.1025(a)(2) both require that an originating good remain under customs control in the territory of a non-Party.										119w73XX
+119w74X	 D The NAFTA’s “Exceptions to Change in Tariff Classification Rules” in HTSUS General Note 12(s)(i) specifically provides for horticultural goods, even if grown from non-originating bulbs, seed, cuttings, etc.										119w74XX
+119w75X	 D & E 19CFR152.103(b)(ii)										119w75XX
+119w76X	 A 19CFR152.106(a)(2)										119w76XX
+119w77X	 A 19CFR152.103(f)										119w77XX
+119w78X	 D 19CFR158.12										119w78XX
+119w79X	 B 19CFR152.102(a)(iv)										119w79XX
+119w80X	 D ACE Business Rules & Process Document Section 4.5.2										119w80XX
+219w1X	 D 19 CFR 141.46, 19 CFR 141.83										219w1XX
+219w2X	 C 19 CFR 111.19(f) 1-4										219w2XX
+219w3X	 B 19 CFR 24.3(e)										219w3XX
+219w4X	 E 19 CFR 111.31(c)										219w4XX
+219w5X	 B 19 CFR 111.1										219w5XX
+219w6X	 C 19 CFR 111.13(f)										219w6XX
+219w7X	 E 19 CFR 111.12										219w7XX
+219w8X	 D 19 CFR 111.30(d)										219w8XX
+219w9X	 E 19 CFR 159.32										219w9XX
+219w10X	 A Customs Directive 3530-002A , 19 CFR 143.26(b)										219w10XX
+219w11X	 B 19 CFR 159.55(a)										219w11XX
+219w12X	 D Prep of 7501, Appendix 2 Rules for constructing the Manufacturer Identification Code, Page 30										219w12XX
+219w13X	 B 19 CFR 123.92										219w13XX
+219w14X	 A 19 CFR 10.31(a)(3)										219w14XX
+219w15X	 E 19 CFR 144.31, Directive 3530-002A										219w15XX
+219w16X	 E 19 CFR 141.61										219w16XX
+219w17X	 B 19 CFR 144.1										219w17XX
+219w18X	 E 19 CFR 141.18										219w18XX
+219w19X	 D General Note 13 to the HTSUS										219w19XX
+219w20X	 C 19 CFR 134.32(i)										219w20XX
+219w21X	 A 19 CFR 134.2										219w21XX
+219w22X	 E 19 CFR 134.33 J-List										219w22XX
+219w23X	 C Ace Business Rules Version 9.75 Section 3.1 Page 5										219w23XX
+219w24X	 E Ace Business Rules Version 9.75 Section 5.3.4 Page 9										219w24XX
+219w25X	 E Ace Business Rules Version 9.75 Section 5.1.2 Page 8 – Section 1.4 Page 1 – Section 4.1 Page 6, Section 6.2.5 Page 13, Section 7.3 Page 15										219w25XX
+219w26X	 E $15,714.42 = $8432.00 X 5.5% = 463.76 - $8432.00 X .3464% = 29.21 - $8432.00 X 180.52% = $15,221.45 take 463.76 + 29.21 + 15,221.45 + 15714.42										219w26XX
+219w27X	 B 19 CFR 165.1 Definitions 1, 2, 3, 4, 6										219w27XX
+219w28X	 E $2785.10 = 10456. X 2.4% = 250.94 + 10456. X .3464% = 36.22 + 10456.00X 23.89% - 2497.94. 250.94 +36.22 + 2497.94 = 2785.10										219w28XX
+219w29X	 C 19 CFR 24.2, 19 CFR 159.58(a), 19 CFR 159.11, 19 CFR 159.12(a)(f), 19 CFR 159.41, 19 CFR 159.61, 19 CFR 159.64										219w29XX
+219w30X	 C HTSUS 9603.90.8050										219w30XX
+219w31X	 C HTSUS 8539.50.0050										219w31XX
+219w32X	 A HTSUS 2008.97.1040, HTSUS 0812.90.9000, HTSUS 2104.20.0000, HTSUS 1905.90.9030, HTSUS 0811.90.3000 & HTSUS Chapter Notes 1(a), 1(c), and 1(d)										219w32XX
+219w33X	 C HTSUS 7222.20.0043, Chapter 72, Note 1(e),(f), (i), (j)(k), (l), (m), (o)										219w33XX
+219w34X	 D HTSUS 6810.19.1200, Chapter 68 Note 2, Chapter 68 Add’l U.S. Note 2										219w34XX
+219w35X	 D HTSUS 9503.00.0090, Chapter Note 5										219w35XX
+219w36X	 E HTSUS 6111.20.4000, Sextion XI, Chapter Note 6(a)(b)										219w36XX
+219w37X	 E HTSUS 6202.13.4020, Section Note XI, subheading note 2(A), Note 8 to Chapter 62										219w37XX
+219w38X	 D HTSUS 7013.99.9000 GRI 2(a)										219w38XX
+219w39X	 E HTSUS 8479.89.9499										219w39XX
+219w40X	 D HTSUS 6405.20.9015										219w40XX
+219w41X	 B HTSUS 7116.20.0500 Chapter 71 Note 1(a), 7 and note 11										219w41XX
+219w42X	 D HTSUS 3808.92 , GRI 1, 3, 6, Application to Note 2 to Chapter 33, Application to Note 1 to Chapter 29, Application of Section VI – Note 2 in conjunction with the terms of the cited Headings										219w42XX
+219w43X	 B HTSUS 6403.91.30, Additional U.S. Note 1(a) to Chapter 64, Note 4(a) to Chapter 64										219w43XX
+219w44X	 D 19 CFR 113.24										219w44XX
+219w45X	 D 19 CFR 19.44(a)										219w45XX
+219w46X	 C 19 CFR 113.62, 19 CFR 113.63, 19 CFR 113.67, 19 CFR 113.73, 19 CFR 113.66										219w46XX
+219w47X	 C 19 CFR 113.55 (c)(1)										219w47XX
+219w48X	 A 19 CFR 152.102(a)										219w48XX
+219w49X	 C 19 CFR 152.103(b)										219w49XX
+219w50X	 E 19 CFR 152.103(1)(1)(iii), 19 CFR 152.103 (j)										219w50XX
+219w51X	 D 19 CFR 152.101, 19 CFR 152.102(a) and 19 CFR 152.102(a)(iv)										219w51XX
+219w52X	 C 19 CFR 191.71(a)										219w52XX
+219w53X	 B 19 CFR 191.92(d)										219w53XX
+219w54X	 C 19 CFR 191.181 & 19 CFR 191.182										219w54XX
+219w55X	 E 19 CFR 191.35(d)										219w55XX
+219w56X	 D 19 CFR 102 Appendix 7 – HKABCCOM1234HON										219w56XX
+219w57X	 D 19 CFR 6102.30.1000										219w57XX
+219w58X	 D 6102.30.1000/64¢ kg + 18.8% = $9450 X 18.8% = 1776.60 , $ 9450 X .3464% = 32.73 & 756 KG x .644¢/kg = 486.86 Totaled $1776.60 + 486.86 + 32.73 = 2296.19 - Key Largo, FL exempt from HMF										219w58XX
+219w59X	 C Prep of 7501 Manufacturer ID, 19 CFR 102 Appendix 7										219w59XX
+219w60X	 D HTSUS 6307.90.9889 Note 7 to Section XI										219w60XX
+219w61X	 B HTSUS 6307.90.9889/7% = 12925 x 7% = 904.75, 12925.00 x .3464% = 44.77 = Total 904.75 + 44.77 = 949.52										219w61XX
+219w62X	 D 19 CFR 111.23 (b)										219w62XX
+219w63X	 D 19 CFR 141.31 (d)										219w63XX
+219w64X	 D 19 CFR 141.34										219w64XX
+219w65X	 C 19 CFR 174.22										219w65XX
+219w66X	 C 19 CFR 171.2										219w66XX
+219w67X	 D 19 CFR 171.11(b)(8), 19 CFR 141.20										219w67XX
+219w68X	 B 19 CFR 133.27										219w68XX
+219w69X	 C 19 CFR 133.3(b)										219w69XX
+219w70X	 E 19 CFR 133.12 a thru e										219w70XX
+219w71X	 E 19 CFR 171										219w71XX
+219w72X	 D 19 CFR 12.39(b)(2)										219w72XX
+219w73X	 C 19 CFR 146.4(d)										219w73XX
+219w74X	 C 19 CFR 146.8, 19 CFR 146.43(b), 19 CFR 146.44(a), 19CFR 146.51, 19 CFR 146.53 (a)-(b)										219w74XX
+219w75X	 C 19 CFR 19.9(c), 19 CFR19.11(c), (h), 19 CFR 19.4(b)(8), 19 CFR 19.3(c)										219w75XX
+219w76X	 B 19 CFR 146.43(a)(2), 19 CFR 146.65(a)(2)										219w76XX
+219w77X	 C 19 CFR 181.31										219w77XX
+219w78X	 E General Note 12(n), subsection I,ii,iii,v,vi NAFTA										219w78XX
+219w79X	 E 9802.00.50, Subchapeter II Note3(f) to Chapter 98										219w79XX
+219w80X	 A General Note 29, 19 CFR 24.23(c)								219w80XX		
 
 
 
