--- a/CBLExam219v2.htm
+++ b/CBLExam219v2.htm
@@ -734,7 +734,7 @@ display: none;
 </div> 			
 <div id=category219w51> 		51. What is the transaction value of the shipment in the following scenario?	
 <input type='radio' name='q219w51' value='A' id='q219w51'><label for=qZw51'A'>		A U.S. business located in Duluth, Minnesota contracts with a manufacturer in Korea to produce	
-<div id=category219w10> 		100 electric motors at a cost of $10 per motor. The U.S. business also contracts with a design	
+ 		100 electric motors at a cost of $10 per motor. The U.S. business also contracts with a design	
 		company in New York to prepare the schematics for use in the production of the motors at a cost	
 		of $5,000. Upon completion, the motors are exported from Korea to China and used in the	
 		manufacture of household vacuum cleaners at a cost of $100 per vacuum cleaner. The	
@@ -781,7 +781,7 @@ display: none;
 <p id="demo54"></p>			
 </div> 			
 <div id=category219w55> 		55. Which of the following statements regarding the Notice of Intent to Export, Destroy, or	
-<input type='radio' name='q219w55' value='R' id='q219w55'><label for=qZw55'R'>		Return Merchandise for Purposes of Drawback is CORRECT?	</p>
+		Return Merchandise for Purposes of Drawback is CORRECT?	</p>
 <input type='radio' name='q219w55' value='A' id='q219w55'><label for=qZw55'A'>		A. The claimant or the exporter must file at the port of intended examination a notice	
 		on CBP Form 7514 at least 30 working days prior to the date of intended exportation	
 		unless CBP approves another filing period or the claimant has been granted a waiver	
@@ -842,7 +842,7 @@ display: none;
 			
 <div id=category219w56> 		56. What is the Manufacturer’s ID?	</p>
 <input type='radio' name='q219w56' value='A' id='q219w56'><label for=qZw56'A'>		A.B.C. Company	
-<div id=category219w55> 		55-5 Hung To Road, P. O. Box 1234	
+ 		55-5 Hung To Road, P. O. Box 1234	
 <input type='radio' name='q219w56' value='K' id='q219w56'><label for=qZw56'K'>		Kowloon, Hong Kong	
 <input type='radio' name='q219w56' value='A' id='q219w56'><label for=qZw56'A'>		A. CNABC555KOW	</label><br>
 <input type='radio' name='q219w56' value='B' id='q219w56'><label for=qZw56'B'>		B. HKABC555KOW	</label><br>
@@ -1004,7 +1004,7 @@ display: none;
 <input type='radio' name='q219w67' value='C' id='q219w67'><label for=qZw67'C'>		C. The contest of the fee rate established for the USDA Agriculture Marketing Service fee,	
 		which is generally applicable to that entry	</label><br>
 <input type='radio' name='q219w67' value='D' id='q219w67'><label for=qZw67'D'>		D. The contest of a denied petition to reliquidate an entry filed pursuant to 19 U.S.C. §	
-<div id=category219w15> 		1520(d)	</label><br>
+ 		1520(d)	</label><br>
 <input type='radio' name='q219w67' value='E' id='q219w67'><label for=qZw67'E'>		E. A request to change the importer of record, which was provided on the entry	
 		documentation for an entry for consumption, from the consignee to the owner of the	
 		merchandise	</label><br>
@@ -1213,10 +1213,10 @@ display: none;
 
 <input type="button" value="send_ether" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="click_get()"/>			
 
-<div id=category219w83>		
+<div id=category219w82>		
 <input type="button" value="SUBMIT" onClick="check_approval()"/>	
 </div>
-<div id=category219w82>	
+<div id=category219w83>	
 <input type="button" value="SUBMIT" onClick="show2()"/>	
 </div>
 <div id="content"></div>
